--- a/docs/02.md
+++ b/docs/02.md
@@ -64,6 +64,16 @@ scala> Gigahorse.url(url).get.
          )
 ```
 
+### Request with content type
+
+`Content-Type` header should be specified when posting a text.
+
+```console
+scala> import java.nio.charset.Charset
+scala> Gigahorse.url(url).post("some text").
+         withContentType(MimeTypes.TEXT, Gigahorse.utf8)
+```
+
 ### Request with additional headers
 
 Headers can be specified as a series of key/value tuples.
