--- a/docs/02.md
+++ b/docs/02.md
@@ -104,6 +104,15 @@ scala> import scala.concurrent._, duration._
 scala> Gigahorse.url(url).get.withRequestTimeout(5000.millis)
 ```
 
+### Submitting form data
+
+To post url-form-encoded data a `Map[String, List[String]]` needs to be passed into `post`.
+
+```console
+scala> val r = Gigahorse.url("http://www.freeformatter.com/json-validator.html").
+         post(Map("inputString" -> List("{}")))
+```
+
 ### Submitting a file
 
 A file can be submitted using `post`, `put`, or `patch` method.
