translated the documentation

--- a/docs/00.md
+++ b/docs/00.md
@@ -21,7 +21,7 @@ Gigahorse is an HTTP client for Scala with [Async Http Client][AHC] undernieth.
 ### Setup
 
 ```scala
-libraryDependencies += "com.eed3si9n" %% "gigahorse-core" % "0.1.0"
+libraryDependencies += "com.eed3si9n" %% "gigahorse-core" % "$gigahorse_version$"
 ```
 
 ### Dependencies
