--- a/docs/02.md
+++ b/docs/02.md
@@ -43,7 +43,7 @@ so potentially this could be extended to accept any custom types.
 
 ### Request with authentication
 
-If you need to use HTTP authentication, you can specify it in the builder, using a username, password, and an AuthScheme. Valid case objects for the AuthScheme are `Basic`, `Digest`, `NTLM`, `Kerberos`, and `SPNEGO`.
+If you need to use HTTP authentication, you can specify it in the request, using a username, password, and an AuthScheme. Valid case objects for the AuthScheme are `Basic`, `Digest`, `NTLM`, `Kerberos`, and `SPNEGO`.
 
 ```console
 scala> Gigahorse.url(url).get.withAuth("username", "password", AuthScheme.Basic)
@@ -106,7 +106,7 @@ scala> Gigahorse.url(url).get.withRequestTimeout(5000.millis)
 
 ### Submitting form data
 
-To post url-form-encoded data a `Map[String, List[String]]` needs to be passed into `post`.
+To build a `Request` value for posting url-form-encoded data, a `Map[String, List[String]]` needs to be passed into `post`.
 
 ```console
 scala> val r = Gigahorse.url("http://www.freeformatter.com/json-validator.html").
@@ -115,9 +115,8 @@ scala> val r = Gigahorse.url("http://www.freeformatter.com/json-validator.html")
 
 ### Submitting a file
 
-A file can be submitted using `post`, `put`, or `patch` method.
+A `Request` value can be created for submitting a file using `post`, `put`, or `patch` method.
 
 ```
 scala> Gigahorse.url(url).post(new File("something.txt"))
 ```
-
