--- a/docs/04.md
+++ b/docs/04.md
@@ -11,7 +11,7 @@ Configuring Gigahorse
 `Gigahorse.config` will read from `application.conf` to configure
 the settings.
 
-* `gigahorse.followRedirect`: Configures the client to follow 301 and 302 redirects *(default is **true**)*.
+* `gigahorse.followRedirects`: Configures the client to follow 301 and 302 redirects *(default is **true**)*.
 * `gigahorse.useProxyProperties`: To use the JVM system's HTTP proxy settings (http.proxyHost, http.proxyPort) *(default is **true**)*.
 * `gigahorse.userAgent`: To configure the User-Agent header field.
 * `gigahorse.compressionEnforced`: Set it to true to use gzip/deflater encoding *(default is **false**)*.
@@ -32,7 +32,7 @@ gigahorse.ssl {
 
 ### Configuring Timeouts
 
-There are 3 different timeouts in Gigahorse. Reaching a timeout causes the WS request to interrupt.
+There are 3 different timeouts in Gigahorse. Reaching a timeout causes the request to interrupt.
 
 * `gigahorse.connectTimeout`: The maximum time to wait when connecting to the remote host *(default is **120 seconds**)*.
 * `gigahorse.requestTimeout`: The total time you accept a request to take (it will be interrupted even if the remote host is still sending data) *(default is **120 seconds**)*.
@@ -44,7 +44,7 @@ The request timeout can be overridden for a specific connection with `withReques
 
 The following advanced settings can be configured.
 
-Please refer to the [AsyncHttpClientConfig Documentation](http://static.javadoc.io/org.asynchttpclient/async-http-client/2.0.0/org/asynchttpclient/DefaultAsyncHttpClientConfig.Builder.html) for more information.
+Refer to the [AsyncHttpClientConfig Documentation](http://static.javadoc.io/org.asynchttpclient/async-http-client/2.0.0/org/asynchttpclient/DefaultAsyncHttpClientConfig.Builder.html) for more information.
 
 * `gigahorse.maxRedirects`: The maximum number of redirects *(default: **5**)*.
 * `gigahorse.maxRequestRetry`: The maximum number of times to retry a request if it fails *(default: **5**)*.
