--- a/docs/ja/00.md
+++ b/docs/ja/00.md
@@ -2,7 +2,64 @@
 out: index.html
 ---
 
+  [AHC]: https://github.com/AsyncHttpClient/async-http-client/tree/1.9.x
+  [netty]: http://netty.io
+  [sslconfig]: https://github.com/typesafehub/ssl-config
+  [config]: https://github.com/typesafehub/config
+  [ws]: https://www.playframework.com/documentation/2.5.x/ScalaWS
+  [dispatch]: http://dispatch.databinder.net/Dispatch.html
+  [datatype]: http://www.scala-sbt.org/0.13/docs/Datatype.html
+  [@wsargent]: https://github.com/wsargent
+  [@n8han]: https://github.com/n8han
+  [@Duhemm]: https://github.com/Duhemm
+
 Gigahorse
 =========
 
-![Gigahorse](files/gigahorse.jpg)
+Gigahorse は、Scala のための HTTP クライアントで、内部に[Async Http Client][AHC] を使っている。
+
+### セットアップ
+
+```scala
+libraryDependencies += "com.eed3si9n" %% "gigahorse-core" % "$gigahorse_version$"
+```
+
+### ライブラリ依存性
+
+Gigahorse は、Scala、[AHC 1.9][AHC] (これは [Netty 3][netty] に依存している)、
+[Lightbend SSL Config][sslconfig]、そして [Lightbend Config][config] に依存している。
+
+### 謝辞
+
+- 実装の大半は、AHC の呼び出し方や設定のデフォルト値なども含め [The Play WS API][ws] がベースとなっている。
+  特に設定に関しては [Lightbend Config][config] と [@wsargent][@wsargent] の [SSL Config][sslconfig]
+  を採用しており、よりセキュアなデフォルトになっている。
+- API の設計に関しては [@n8han][@n8han] の [Dispatch Reboot][dispatch] に強い影響を受けている。
+- データ型の全ては [@Duhemm][@Duhemm] と僕が作った [sbt-datatype][datatype] を使って自動生成されている。
+- 実際の HTTP の仕事をしている [Async Http Client][AHC] と [Netty][netty] にこの場を借りて感謝したい。
+
+### ライセンス
+
+Apache v2
+
+### クイックスタート
+
+Gigahorse を使った簡単な GET 呼び出しの例をみてみよう:
+
+```console
+scala> import gigahorse._
+scala> import scala.concurrent._, duration._
+scala> Gigahorse.withHttp(Gigahorse.config) { http =>
+         val r = Gigahorse.url("http://api.duckduckgo.com").get.
+           addQueryString(
+             "q" -> "1 + 1",
+             "format" -> "json"
+           )
+         val f = http.run(r, Gigahorse.asString andThen {_.take(60)})
+         Await.result(f, 120.seconds)
+       }
+```
+
+<div style="margin: 100px"></div>
+
+![Gigahorse](../files/gigahorse.jpg)
