--- a/docs/ja/03.md
+++ b/docs/ja/03.md
@@ -4,28 +4,27 @@ out:processing.html
 
   [concepts]: concepts.html
 
-Processing the Response
------------------------
+Response の処理
+--------------
 
-Once you build a `Request` value, you can pass it to `HttpClient`
-to execute the request using `run`, `download`, or `process` methods.
+`Request` 値が構築できたら、次に `HttpClient` に渡して、
+`run`、`download`、`process` といったメソッドを使って実行することができる。
 
 ### http.run(r, f)
 
-There are many methods on `HttpClient`, but probably the most useful one is
-`http.run(r, f)` method. As we saw in [Basic Concepts][concepts] page
-this take a `Request` value, and a function `Response => A`.
+`HttpClient` には多くのメソッドが定義されているが、おそらく最も便利なのは
+`http.run(r, f)` メソッドだ。[基本的な概念][concepts]のページで見たようにこれは、
+`Request` 値と `Response => A` の関数を受け取る。
 
-Gigahorse provides `Gigahorse.asString` function to return `Future[String]`,
-but we can imagine this could be expanded to do more.
+Gigahorse は、`Future[String]` を返すために `Gigahorse.asString` という関数を提供するが、
+これを拡張して他の型に応用できることは想像に難くない。
 
-Another thing to note is that `run` method will only accept HTTP 2XX statuses,
-and fail the future value otherwise. (By default 3XX redirects are handled automatically)
+一つ注意するべきなのは、`run` メソッドは HTTP 2XX 番台のステータスのみを受け付け、
+その他の場合は `Future` を失敗させるということだ。(デフォルトの設定では、3XX のリダイレクトは自動的に処理される)
 
-### Post-processing a Future
+### Future の後処理
 
-In addition to passing in a function, a `Future` can easily be post-processed
-by mapping inside it.
+関数を渡すのに加え、中の値を map することで簡単に `Future` を後付けで処理することができる。
 
 ```console:new
 scala> import gigahorse._
@@ -43,18 +42,18 @@ scala> Gigahorse.withHttp(Gigahorse.config) { http =>
        }
 ```
 
-Whenever an operation is done on a `Future`, an implicit execution context must be available
--- this declares which thread pool the callback to the future should run in.
+`Future` に対して何らかの演算を行うときは、implicit な実行コンテキストが必要となる。
+実行コンテキストは、`Future` のコールバックがどのスレッドプールで実行されるかを宣言するものだ。
 
-For convenience there's an overload of `run` that takes only the `Request` parameter.
+便宜上、`Request` のみを受け取る `run` のオーバーロードもある。
 
-### Lifting the Response to Either
+### Response を Either に持ち上げる
 
-One of the common processing when dealing with a Future that can fail is to
-lift the inner `A` value to `Either[Throwable, A]`.
+`Future` が失敗する場合があるときによく行われる処理として、内部の `A` を
+`Either[Throwable, A]` に持ち上げるということが行われる。
 
-There's a convenient website called <http://getstatuscode.com/>
-that can emulate HTTP statuses. Here's what happens when we await on a failed Future.
+<http://getstatuscode.com/> という便利なウェブサイトがあって、これは
+任意の HTTP ステータスを返すことができる。失敗した `Future` に対してブロックするとどうなるかをみてみよう。
 
 ```console:error
 scala> Gigahorse.withHttp(Gigahorse.config) { http =>
@@ -64,8 +63,7 @@ scala> Gigahorse.withHttp(Gigahorse.config) { http =>
        }
 ```
 
-Gigahorse provides a mechanism called `Gigahorse.asEither` to
-lift the inner `A` value to `Either[Throwable, A]` as follows:
+ `Gigahorse.asEither` という機構を使って `A` を `Either[Throwable, A]` に持ち上げることができる。
 
 ```console
 scala> Gigahorse.withHttp(Gigahorse.config) { http =>
@@ -75,7 +73,7 @@ scala> Gigahorse.withHttp(Gigahorse.config) { http =>
        }
 ```
 
-`asEither` can be mapped over as a right-biased `Either`.
+`asEither` は右バイアスのかかった `Either` として `map` することもできる。
 
 ```console
 scala> Gigahorse.withHttp(Gigahorse.config) { http =>
@@ -86,9 +84,9 @@ scala> Gigahorse.withHttp(Gigahorse.config) { http =>
        }
 ```
 
-### Downloading a file
+### ファイルのダウンロード
 
-A file can be downloaded using `download` method:
+`download` メソッドを使ってファイルをダウンロードすることができる。
 
 ```console
 scala> import java.io.File
@@ -100,12 +98,12 @@ scala> Gigahorse.withHttp(Gigahorse.config) { http =>
        }
 ```
 
-This will return `Future[File]`.
+これは `Future[File]` を返す。
 
 ### http.process(r, f)
 
-If you do not wish to throw an error on non-2XX responses, and for example
-read the body text of a 500 response, use `process` method.
+non-2XX レスポンスでエラーを投げたくなくて、例えば 500 レスポンスのボディーテキストを
+読み込みたい場合は `process` メソッドを使う。
 
 ```console
 scala> Gigahorse.withHttp(Gigahorse.config) { http =>
@@ -115,19 +113,18 @@ scala> Gigahorse.withHttp(Gigahorse.config) { http =>
        }
 ```
 
-`HttpClient` also implements `process` method that accepts `Gigahorse.toEither` too.
+`HttpClient` は `Gigahorse.toEither` を受け取る `process` も実装する。
 
-### Asynchronous processing using CompletionHandler
+### CompletionHandler を用いた非同期処理
 
-Finally, Gigahorse offers an overload of `process` method that
-lets you access the full power of AsyncHttpClient.
+最後に、AsyncHttpClient のフルパワーを駆使できる `process` メソッドのオーバーロードがある。
 
 ```scala
   /** Executes the request. Does not error on non-OK response. */
   def process[A](request: Request, handler: CompletionHandler[A]): Future[A]
 ```
 
-Here's how `CompletionHandler` looks like:
+`CompletionHandler` はこのような実装になっている:
 
 ```scala
 import com.ning.http.client.{ Response => XResponse, _ }
@@ -155,8 +152,8 @@ abstract class CompletionHandler[A] {
 }
 ```
 
-This is the most basic building block that you can build everything else.
-For example, `download` is implementing as follows:
+これは他の全ての処理の作ることができる基礎的なものだ。
+例えば、`download` は以下のように実装されている。
 
 ```scala
   def download(request: Request, file: File): Future[File] =
@@ -171,5 +168,4 @@ For example, `download` is implementing as follows:
     })
 ```
 
-This will write into the `FileOutputStream` as the parts arrive,
-without copying the bytes into the buffer.
+これはパーツが届くとすぐに `FileOutputStream` に書き込んでいて、バッファーへバイトをコピーすることを避けている。
