--- a/docs/00.md
+++ b/docs/00.md
@@ -16,7 +16,7 @@ out: index.html
 Gigahorse
 =========
 
-Gigahorse is an HTTP client for Scala with [Async Http Client][AHC] undernieth.
+Gigahorse is an HTTP client for Scala with [Async Http Client][AHC] underneath.
 
 ### Setup
 
