--- a/docs/00.md
+++ b/docs/00.md
@@ -9,35 +9,49 @@ out: index.html
   [ws]: https://www.playframework.com/documentation/2.5.x/ScalaWS
   [dispatch]: http://dispatch.databinder.net/Dispatch.html
   [datatype]: http://www.scala-sbt.org/0.13/docs/Datatype.html
+  [akkahttp]: http://doc.akka.io/docs/akka-http/current/scala.html
   [@wsargent]: https://github.com/wsargent
   [@n8han]: https://github.com/n8han
   [@Duhemm]: https://github.com/Duhemm
+  [@alexdupre]: https://github.com/alexdupre
 
 Gigahorse
 =========
 
-Gigahorse is an HTTP client for Scala with [Async Http Client][AHC] underneath.
+Gigahorse is an HTTP client for Scala that can wrap either
+[Async Http Client][AHC] or [Akka HTTP][akkahttp] underneath.
 
 ### Setup
 
+For Async HTTP Client:
+
 ```scala
-libraryDependencies += "com.eed3si9n" %% "gigahorse-core" % "$gigahorse_version$"
+libraryDependencies += "com.eed3si9n" %% "gigahorse-asynchttpclient" % "$gigahorse_version$"
+```
+
+Akka HTTP support is experimental:
+
+```scala
+libraryDependencies += "com.eed3si9n" %% "gigahorse-akka-http" % "$gigahorse_version$"
 ```
 
 ### Dependencies
 
-Gigahorse depends on Scala, [AHC 1.9][AHC], which brings in [Netty 3][netty].
+Gigahorse-AsyncHttpClient depends on Scala, [AHC 2.0][AHC], which brings in [Netty 4][netty].
 It also depends on [Lightbend SSL Config][sslconfig] and [Lightbend Config][config].
+
+Gigahorse-Akka-HTTP is experimental, and not all features are hooked up yet.
 
 ### Credits
 
-- The implementation was based from [The Play WS API][ws],
+- The implementation was originally based from [The Play WS API][ws],
   including the way AHC is called and the choice of default values.
   In particular, it uses [Lightbend Config][config] and [@wsargent][@wsargent]'s [SSL Config][sslconfig],
   which uses securer defaults.
 - API design is also strongly influenced by that of [Dispatch Reboot][dispatch] by [@n8han][@n8han].
 - All datatypes are generated using [sbt-datatype][datatype], which [@Duhemm][@Duhemm] and I worked on.
-- Finally, props go to [Async Http Client][AHC] and [Netty][netty] for the actual HTTP work.
+- [@alexdupre][@alexdupre] contributed AHC 2.0 migration and WebSocket support.
+- Finally, props to underlying HTTP libraries for the actual HTTP work.
 
 ### License
 
@@ -48,7 +62,7 @@ Apache v2
 Here's a quick example of how to make a GET call using Gigahorse:
 
 ```console
-scala> import gigahorse._
+scala> import gigahorse._, support.asynchttpclient.Gigahorse
 scala> import scala.concurrent._, duration._
 scala> Gigahorse.withHttp(Gigahorse.config) { http =>
          val r = Gigahorse.url("http://api.duckduckgo.com").get.
