--- a/docs/01.md
+++ b/docs/01.md
@@ -9,7 +9,9 @@ Basic concepts
 
 ### Gigahorse
 
-`gigahorse.Gigahorse` is a helper object to create many useful things.
+`Gigahorse` is a helper object to create many useful things.
+For AHC backend, use `gigahorse.support.asynchttpclient.Gigahorse`.
+For Akka HTTP backend, `gigahorse.support.akkahttp.Gigahorse`.
 
 ### HttpClient
 
@@ -21,7 +23,7 @@ There are two ways of creating an `HttpClient`.
 First is using the loan pattern `Gigahorse.withHttp(config) { ... }`:
 
 ```console:new
-scala> import gigahorse._
+scala> import gigahorse._, support.asynchttpclient.Gigahorse
 scala> Gigahorse.withHttp(Gigahorse.config) { http =>
          // do something
        }
@@ -74,14 +76,14 @@ There are many methods on `HttpClient`, but probably the most useful one is
 ```scala
 abstract class HttpClient extends AutoCloseable {
   /** Runs the request and return a Future of A. Errors on non-OK response. */
-  def run[A](request: Request, f: Response => A): Future[A]
+  def run[A](request: Request, f: FullResponse => A): Future[A]
 
   ....
 }
 ```
 
 The first parameter take a `Request`, and the second parameter takes a function
-from `Response` to `A`. There's a built-in function called `Gigahorse.asString`
+from `FullResponse` to `A`. There's a built-in function called `Gigahorse.asString`
 that returns the body content as a `String`.
 
 Since this is a plain function, you can compose it with some other function
@@ -102,10 +104,16 @@ scala> Gigahorse.withHttp(Gigahorse.config) { http =>
 
 ### Future
 
-Because `run` executes a request in a non-blocking fashion, it return a `Future`.
+Because `run` executes a request in a non-blocking fashion, it returns a `Future`.
 Normally, you want to keep the `Future` value as long as you can,
 but here, we will block it to see the value.
 
 One motivation for keeping the `Future` value as long as you can
 is working with multiple Futures (HTTP requests) in parallel.
 See [Futures and Promises][Future] to learn more about Futures.
+
+### http.runStream(r, f)
+
+Instead of running on the full reponse,
+Gigahorse can also treat the incoming response as a Reactive Stream,
+and process them by chunk, for example line by line.
