--- a/docs/02.md
+++ b/docs/02.md
@@ -8,7 +8,7 @@ Building a Request value
 To construct a `Request` value, call `Gigahorse.url(...)` function:
 
 ```console:new
-scala> import gigahorse._
+scala> import gigahorse._, support.asynchttpclient.Gigahorse
 scala> val url = "http://api.duckduckgo.com"
 scala> val r = Gigahorse.url(url)
 ```
