--- a/docs/05.md
+++ b/docs/05.md
@@ -23,7 +23,7 @@ On this page, we will go through one way of writing a plugin.
 First, we'll define `RequestBuilder` with a method that returns a `Request`:
 
 ```console:new
-scala> import gigahorse._
+scala> import gigahorse._, support.asynchttpclient.Gigahorse
 scala> import scala.concurrent._, duration._
 scala> :paste
 abstract class RequestBuilder {
@@ -164,7 +164,7 @@ object Repo {
 We can now define `asRepo` function by composing it with a JSON parser.
 
 ```scala
-import gigahorse._
+import import gigahorse._, support.asynchttpclient.Gigahorse
 import github.{ response => res }
 import sjsonnew.JsonFormat
 import sjsonnew.support.scalajson.unsafe.Converter
