--- a/docs/ja/00.md
+++ b/docs/ja/00.md
@@ -9,34 +9,47 @@ out: index.html
   [ws]: https://www.playframework.com/documentation/2.5.x/ScalaWS
   [dispatch]: http://dispatch.databinder.net/Dispatch.html
   [datatype]: http://www.scala-sbt.org/0.13/docs/Datatype.html
+  [akkahttp]: http://doc.akka.io/docs/akka-http/current/scala.html
   [@wsargent]: https://github.com/wsargent
   [@n8han]: https://github.com/n8han
   [@Duhemm]: https://github.com/Duhemm
+  [@alexdupre]: https://github.com/alexdupre
 
 Gigahorse
 =========
 
-Gigahorse は、Scala のための HTTP クライアントで、内部に[Async Http Client][AHC] を使っている。
+Gigahorse は、Scala のための HTTP クライアントで、内部に[Async Http Client][AHC] か [Akka HTTP][akkahttp] を使うことができる。
 
 ### セットアップ
 
+Async HTTP Client を使う場合:
+
 ```scala
-libraryDependencies += "com.eed3si9n" %% "gigahorse-core" % "$gigahorse_version$"
+libraryDependencies += "com.eed3si9n" %% "gigahorse-asynchttpclient" % "$gigahorse_version$"
+```
+
+Akka HTTP は現段階では実験的サポート:
+
+```scala
+libraryDependencies += "com.eed3si9n" %% "gigahorse-akka-http" % "$gigahorse_version$"
 ```
 
 ### ライブラリ依存性
 
-Gigahorse は、Scala、[AHC 1.9][AHC] (これは [Netty 3][netty] に依存している)、
+Gigahorse-AsyncHttpClient は、Scala、[AHC 2.0][AHC] (これは [Netty 4][netty] に依存している)、
 [Lightbend SSL Config][sslconfig]、そして [Lightbend Config][config] に依存している。
+
+Gigahorse-Akka-HTTP は現状では実験段階で、まだ実装されていない機能もある。
 
 ### 謝辞
 
-- 実装の大半は、AHC の呼び出し方や設定のデフォルト値なども含め [The Play WS API][ws] がベースとなっている。
+- 実装の大半は、AHC の呼び出し方や設定のデフォルト値なども含め [The Play WS API][ws] をベースとした。
   特に設定に関しては [Lightbend Config][config] と [@wsargent][@wsargent] の [SSL Config][sslconfig]
   を採用しており、よりセキュアなデフォルトになっている。
 - API の設計に関しては [@n8han][@n8han] の [Dispatch Reboot][dispatch] に強い影響を受けている。
 - データ型の全ては [@Duhemm][@Duhemm] と僕が作った [sbt-datatype][datatype] を使って自動生成されている。
-- 実際の HTTP の仕事をしている [Async Http Client][AHC] と [Netty][netty] にこの場を借りて感謝したい。
+- [@alexdupre][@alexdupre] は AHC 2.0 へのマイグレーションと WebSocket サポートをコントリビュートしてくれた。
+- 実際の HTTP の仕事をしている HTTP ライブラリにこの場を借りて感謝したい。
 
 ### ライセンス
 
@@ -47,7 +60,7 @@ Apache v2
 Gigahorse を使った簡単な GET 呼び出しの例をみてみよう:
 
 ```console
-scala> import gigahorse._
+scala> import gigahorse._, support.asynchttpclient.Gigahorse
 scala> import scala.concurrent._, duration._
 scala> Gigahorse.withHttp(Gigahorse.config) { http =>
          val r = Gigahorse.url("http://api.duckduckgo.com").get.
