--- a/docs/ja/01.md
+++ b/docs/ja/01.md
@@ -9,7 +9,9 @@ out: concepts.html
 
 ### Gigahorse
 
-`gigahorse.Gigahorse` は、色々便利なものを作るためのヘルパーオブジェクトだ。
+`Gigahorse`　は、色々便利なものを作るためのヘルパーオブジェクトだ。
+AHC をバックエンドに使う場合は、`gigahorse.support.asynchttpclient.Gigahorse`。
+Akka HTTP をバックエンドに使う場合は、`gigahorse.support.akkahttp.Gigahorse`。
 
 ### HttpClient
 
@@ -21,7 +23,7 @@ out: concepts.html
 第一は loan パターン `Gigahorse.withHttp(config) { ... }` を使うことだ:
 
 ```console:new
-scala> import gigahorse._
+scala> import gigahorse._, support.asynchttpclient.Gigahorse
 scala> Gigahorse.withHttp(Gigahorse.config) { http =>
          // do something
        }
@@ -74,13 +76,13 @@ scala> val r = Gigahorse.url("http://api.duckduckgo.com").get.
 ```scala
 abstract class HttpClient extends AutoCloseable {
   /** Runs the request and return a Future of A. Errors on non-OK response. */
-  def run[A](request: Request, f: Response => A): Future[A]
+  def run[A](request: Request, f: FullResponse => A): Future[A]
 
   ....
 }
 ```
 
-第一パラメータは `Request` を受け取り、第二パラメータは `Response` から `A` への関数を受け取る。
+第一パラメータは `Request` を受け取り、第二パラメータは `FullResponse` から `A` への関数を受け取る。
 `Gigahorse.asString` という関数が予めついてきて、これはボディーのコンテンツを `String` で返す。
 
 さらに、これはただの関数なので `andThen` を使って他の関数と合成することができる:
@@ -107,3 +109,9 @@ scala> Gigahorse.withHttp(Gigahorse.config) { http =>
 `Future` の中に値をできる限り保っておく動機として、並列に複数の
 `Future` (この場合 HTTP リクエスト) を取り扱うことができるということが挙げられる。
 Future に関する詳細は [Futures and Promises][Future] を参照してほしい。
+
+### http.runStream(r, f)
+
+Gigahorse は、全レスポンスに対して `run` するのだけではなく、
+返ってきた部分レスポンスを Reactive Stream として扱って、
+例えば行ごとに処理するということも可能だ。
