--- a/docs/ja/05.md
+++ b/docs/ja/05.md
@@ -23,7 +23,7 @@ Gigahorse プラグインは以下のものを提供する:
 まずは `Request` を返すメソッドを 1つ持つ `RequestBuilder` を定義する:
 
 ```console:new
-scala> import gigahorse._
+scala> import gigahorse._, support.asynchttpclient.Gigahorse
 scala> import scala.concurrent._, duration._
 scala> :paste
 abstract class RequestBuilder {
@@ -162,7 +162,7 @@ object Repo {
 適当な JSON パーサーと合成することで `asRepo` 関数を定義できる。
 
 ```scala
-import gigahorse._
+import gigahorse._, support.asynchttpclient.Gigahorse
 import github.{ response => res }
 import sjsonnew.JsonFormat
 import sjsonnew.support.scalajson.unsafe.Converter
