--- a/docs/03.md
+++ b/docs/03.md
@@ -4,17 +4,17 @@ out:processing.html
 
   [concepts]: concepts.html
 
-Processing the Response
------------------------
+Processing the FullResponse
+---------------------------
 
 Once you build a `Request` value, you can pass it to `HttpClient`
-to execute the request using `run`, `download`, or `process` methods.
+to execute the request using `run`, `download`, `processFull`, `runStream` methods.
 
 ### http.run(r, f)
 
 There are many methods on `HttpClient`, but probably the most useful one is
 `http.run(r, f)` method. As we saw in [Basic Concepts][concepts] page
-this take a `Request` value, and a function `Response => A`.
+this take a `Request` value, and a function `FullResponse => A`.
 
 Gigahorse provides `Gigahorse.asString` function to return `Future[String]`,
 but we can imagine this could be expanded to do more.
@@ -28,7 +28,7 @@ In addition to passing in a function, a `Future` can easily be post-processed
 by mapping inside it.
 
 ```console:new
-scala> import gigahorse._
+scala> import gigahorse._, support.asynchttpclient.Gigahorse
 scala> import scala.concurrent._, duration._
 scala> import ExecutionContext.Implicits._
 scala> Gigahorse.withHttp(Gigahorse.config) { http =>
@@ -37,7 +37,7 @@ scala> Gigahorse.withHttp(Gigahorse.config) { http =>
              "q" -> "1 + 1",
              "format" -> "json"
            )
-         val f0: Future[Response] = http.run(r, identity)
+         val f0: Future[FullResponse] = http.run(r, identity)
          val f: Future[String] = f0 map { Gigahorse.asString andThen (_.take(60)) }
          Await.result(f, 120.seconds)
        }
@@ -48,7 +48,7 @@ Whenever an operation is done on a `Future`, an implicit execution context must 
 
 For convenience there's an overload of `run` that takes only the `Request` parameter.
 
-### Lifting the Response to Either
+### Lifting the FullResponse to Either
 
 One of the common processing when dealing with a Future that can fail is to
 lift the inner `A` value to `Either[Throwable, A]`.
@@ -86,6 +86,19 @@ scala> Gigahorse.withHttp(Gigahorse.config) { http =>
        }
 ```
 
+### http.processFull(r, f)
+
+If you do not wish to throw an error on non-2XX responses, and for example
+read the body text of a 500 response, use `processFull` method.
+
+```console
+scala> Gigahorse.withHttp(Gigahorse.config) { http =>
+         val r = Gigahorse.url("http://getstatuscode.com/500")
+         val f = http.processFull(r, Gigahorse.asString andThen (_.take(60)))
+         Await.result(f, 120.seconds)
+       }
+```
+
 ### Downloading a file
 
 A file can be downloaded using `download` method:
@@ -102,74 +115,102 @@ scala> Gigahorse.withHttp(Gigahorse.config) { http =>
 
 This will return `Future[File]`.
 
-### http.process(r, f)
+### Asynchronous processing with Reactive Stream
 
-If you do not wish to throw an error on non-2XX responses, and for example
-read the body text of a 500 response, use `process` method.
-
-```console
-scala> Gigahorse.withHttp(Gigahorse.config) { http =>
-         val r = Gigahorse.url("http://getstatuscode.com/500")
-         val f = http.process(r, Gigahorse.asString andThen (_.take(60)))
-         Await.result(f, 120.seconds)
-       }
-```
-
-`HttpClient` also implements `process` method that accepts `Gigahorse.toEither` too.
-
-### Asynchronous processing using CompletionHandler
-
-Finally, Gigahorse offers an overload of `process` method that
-lets you access the full power of AsyncHttpClient.
+We can also treat the incoming response as a Reactive Stream,
+and work on them part by part using `http.runStream(r, f)`.
 
 ```scala
-  /** Executes the request. Does not error on non-OK response. */
-  def process[A](request: Request, handler: CompletionHandler[A]): Future[A]
+  /** Runs the request and return a Future of A. */
+  def runStream[A](request: Request, f: StreamResponse => Future[A]): Future[A]
 ```
 
-Here's how `CompletionHandler` looks like:
+Note that the function takes a `StreamResponse` instead of a `FullResponse`. Unlike the `FullResponse`, it does not have the body contents received yet.
+
+Instead, `StreamResponse` can create `Stream[A]` that will retrieve the parts on-demand.
+As a starting point, Gigahorse provides `Gigahorse.asByteStream` and `Gigahorse.asStringStream`.
+
+Here's how `Stream[A]` looks like:
 
 ```scala
-import com.ning.http.client.{ Response => XResponse, _ }
+import org.reactivestreams.Publisher
+import scala.concurrent.Future
 
-abstract class CompletionHandler[A] {
-  val builder = new XResponse.ResponseBuilder
+abstract class Stream[A] {
+  /**
+   * @return The underlying Stream object.
+   */
+  def underlying[A]
 
-  def onStatusReceived(status: HttpResponseStatus): State = {
-    builder.reset()
-    builder.accumulate(status)
-    State.Continue
-  }
+  def toPublisher: Publisher[A]
 
-  def onHeadersReceived(headers: HttpResponseHeaders): State = {
-    builder.accumulate(headers)
-    State.Continue
-  }
+  /** Runs f on each element received to the stream. */
+  def foreach(f: A => Unit): Future[Unit]
 
-  def onBodyPartReceived(content: HttpResponseBodyPart): State = {
-    builder.accumulate(content)
-    State.Continue
-  }
+  /** Runs f on each element received to the stream with its previous output. */
+  def fold[B](zero: B)(f: (B, A) => B): Future[B]
 
-  def onCompleted(response: Response): A
+  /** Similar to fold but uses first element as zero element. */
+  def reduce(f: (A, A) => A): Future[A]
 }
 ```
 
-This is the most basic building block that you can build everything else.
+Using this, processing stream at relative ease.
 For example, `download` is implementing as follows:
 
 ```scala
   def download(request: Request, file: File): Future[File] =
-    process(request, new OkHandler[File](_ => ???) {
-      import java.io.FileOutputStream
-      val out = new FileOutputStream(file)
-      override def onBodyPartReceived(content: HttpResponseBodyPart): State = {
-        content.writeTo(out)
-        State.Continue
-      }
-      override def onCompleted(response: Response) = file
-    })
+    runStream(request, asFile(file))
+
+....
+
+import java.nio.ByteBuffer
+import java.nio.charset.Charset
+import java.io.{ File, FileOutputStream }
+import scala.concurrent.Future
+
+object DownloadHandler {
+  /** Function from `StreamResponse` to `Future[File]` */
+  def asFile(file: File): StreamResponse => Future[File] = (response: StreamResponse) =>
+    {
+      val stream = response.byteBuffers
+      val out = new FileOutputStream(file).getChannel
+      stream.fold(file)((acc, bb) => {
+        out.write(bb)
+        acc
+      })
+    }
+}
 ```
 
-This will write into the `FileOutputStream` as the parts arrive,
-without copying the bytes into the buffer.
+`stream.fold` will write into the `FileOutputStream` as the parts arrive.
+
+### Newline delimited stream
+
+Here's another example, this time using Akka HTTP.
+Suppose we are running `\$ python -m SimpleHTTPServer 8000`, which serves the current directory over port 8000, and let's say we want to take `README.markdown` and print each line:
+
+```scala
+scala> import gigahorse._, support.akkahttp.Gigahorse
+import gigahorse._
+import support.akkahttp.Gigahorse
+
+scala> import scala.concurrent._, duration._
+import scala.concurrent._
+import duration._
+
+scala> Gigahorse.withHttp(Gigahorse.config) { http =>
+         val r = Gigahorse.url("http://localhost:8000/README.markdown").get
+         val f = http.runStream(r, Gigahorse.asStringStream andThen { xs =>
+           xs.foreach { s => println(s) }
+         })
+         Await.result(f, 120.seconds)
+       }
+Gigahorse
+==========
+
+Gigahorse is an HTTP client for Scala with Async Http Client or Lightbend Akka HTTP underneath.
+....
+```
+
+It worked. This could be used for process an infinite stream of JSON.
