--- a/docs/00.md
+++ b/docs/00.md
@@ -4,11 +4,12 @@ out: index.html
 
   [AHC]: https://github.com/AsyncHttpClient/async-http-client/tree/1.9.x
   [netty]: http://netty.io
+  [okhttp]: http://square.github.io/okhttp/
   [sslconfig]: https://github.com/typesafehub/ssl-config
   [config]: https://github.com/typesafehub/config
   [ws]: https://www.playframework.com/documentation/2.5.x/ScalaWS
   [dispatch]: http://dispatch.databinder.net/Dispatch.html
-  [datatype]: http://www.scala-sbt.org/0.13/docs/Datatype.html
+  [contraband]: http://www.scala-sbt.org/contraband/
   [akkahttp]: http://doc.akka.io/docs/akka-http/current/scala.html
   [@wsargent]: https://github.com/wsargent
   [@n8han]: https://github.com/n8han
@@ -19,9 +20,15 @@ Gigahorse
 =========
 
 Gigahorse is an HTTP client for Scala that can wrap either
-[Async Http Client][AHC] or [Akka HTTP][akkahttp] underneath.
+[Square OkHttp][okhttp], [Async Http Client][AHC], or [Akka HTTP][akkahttp] underneath.
 
 ### Setup
+
+For Square OkHttp Client:
+
+```scala
+libraryDependencies += "com.eed3si9n" %% "gigahorse-okhttp" % "$gigahorse_version$"
+```
 
 For Async HTTP Client:
 
@@ -37,10 +44,12 @@ libraryDependencies += "com.eed3si9n" %% "gigahorse-akka-http" % "$gigahorse_ver
 
 ### Dependencies
 
-Gigahorse-AsyncHttpClient depends on Scala, [AHC 2.0][AHC], which brings in [Netty 4][netty].
+Gigahorse-OkHttp depends on Scala and [Square OkHttp][okhttp].
 It also depends on [Lightbend SSL Config][sslconfig] and [Lightbend Config][config].
 
-Gigahorse-Akka-HTTP is experimental, and not all features are hooked up yet.
+Gigahorse-AsyncHttpClient depends on Scala, [AHC 2.0][AHC], which brings in [Netty 4][netty].
+
+Gigahorse-Akka-HTTP is experimental, and not all features are hooked up.
 
 ### Credits
 
@@ -49,7 +58,7 @@ Gigahorse-Akka-HTTP is experimental, and not all features are hooked up yet.
   In particular, it uses [Lightbend Config][config] and [@wsargent][@wsargent]'s [SSL Config][sslconfig],
   which uses securer defaults.
 - API design is also strongly influenced by that of [Dispatch Reboot][dispatch] by [@n8han][@n8han].
-- All datatypes are generated using [sbt-datatype][datatype], which [@Duhemm][@Duhemm] and I worked on.
+- All datatypes are generated using [Contraband][contraband], which [@Duhemm][@Duhemm] and I worked on.
 - [@alexdupre][@alexdupre] contributed AHC 2.0 migration and WebSocket support.
 - Finally, props to underlying HTTP libraries for the actual HTTP work.
 
@@ -62,7 +71,7 @@ Apache v2
 Here's a quick example of how to make a GET call using Gigahorse:
 
 ```console
-scala> import gigahorse._, support.asynchttpclient.Gigahorse
+scala> import gigahorse._, support.okhttp.Gigahorse
 scala> import scala.concurrent._, duration._
 scala> Gigahorse.withHttp(Gigahorse.config) { http =>
          val r = Gigahorse.url("http://api.duckduckgo.com").get.
