--- a/docs/ja/00.md
+++ b/docs/ja/00.md
@@ -4,11 +4,12 @@ out: index.html
 
   [AHC]: https://github.com/AsyncHttpClient/async-http-client/tree/1.9.x
   [netty]: http://netty.io
+  [okhttp]: http://square.github.io/okhttp/
   [sslconfig]: https://github.com/typesafehub/ssl-config
   [config]: https://github.com/typesafehub/config
   [ws]: https://www.playframework.com/documentation/2.5.x/ScalaWS
   [dispatch]: http://dispatch.databinder.net/Dispatch.html
-  [datatype]: http://www.scala-sbt.org/0.13/docs/Datatype.html
+  [contraband]: http://www.scala-sbt.org/contraband/
   [akkahttp]: http://doc.akka.io/docs/akka-http/current/scala.html
   [@wsargent]: https://github.com/wsargent
   [@n8han]: https://github.com/n8han
@@ -18,9 +19,15 @@ out: index.html
 Gigahorse
 =========
 
-Gigahorse は、Scala のための HTTP クライアントで、内部に[Async Http Client][AHC] か [Akka HTTP][akkahttp] を使うことができる。
+Gigahorse は、Scala のための HTTP クライアントで、内部に [Square OkHttp][okhttp] か [Async Http Client][AHC] か [Akka HTTP][akkahttp] を使うことができる。
 
 ### セットアップ
+
+Square OkHttp を使う場合:
+
+```scala
+libraryDependencies += "com.eed3si9n" %% "gigahorse-okhttp" % "$gigahorse_version$"
+```
 
 Async HTTP Client を使う場合:
 
@@ -36,10 +43,12 @@ libraryDependencies += "com.eed3si9n" %% "gigahorse-akka-http" % "$gigahorse_ver
 
 ### ライブラリ依存性
 
-Gigahorse-AsyncHttpClient は、Scala、[AHC 2.0][AHC] (これは [Netty 4][netty] に依存している)、
-[Lightbend SSL Config][sslconfig]、そして [Lightbend Config][config] に依存している。
+Gigahorse-OkHttp は、Scala と [Square OkHttp][okhttp] に依存する。
+他に [Lightbend SSL Config][sslconfig]、そして [Lightbend Config][config] にも依存している。
 
-Gigahorse-Akka-HTTP は現状では実験段階で、まだ実装されていない機能もある。
+Gigahorse-AsyncHttpClient は、Scala、[AHC 2.0][AHC] (これは [Netty 4][netty] に依存している)、
+
+Gigahorse-Akka-HTTP は現状では実験段階で、実装されていない機能もある。
 
 ### 謝辞
 
@@ -60,7 +69,7 @@ Apache v2
 Gigahorse を使った簡単な GET 呼び出しの例をみてみよう:
 
 ```console
-scala> import gigahorse._, support.asynchttpclient.Gigahorse
+scala> import gigahorse._, support.okhttp.Gigahorse
 scala> import scala.concurrent._, duration._
 scala> Gigahorse.withHttp(Gigahorse.config) { http =>
          val r = Gigahorse.url("http://api.duckduckgo.com").get.
