--- a/docs/ja/00.md
+++ b/docs/ja/00.md
@@ -5,8 +5,8 @@ out: index.html
   [AHC]: https://github.com/AsyncHttpClient/async-http-client/tree/1.9.x
   [netty]: http://netty.io
   [okhttp]: http://square.github.io/okhttp/
-  [sslconfig]: https://github.com/typesafehub/ssl-config
-  [config]: https://github.com/typesafehub/config
+  [sslconfig]: https://github.com/lightbend/ssl-config
+  [config]: https://github.com/lightbend/config
   [ws]: https://www.playframework.com/documentation/2.5.x/ScalaWS
   [dispatch]: http://dispatch.databinder.net/Dispatch.html
   [contraband]: http://www.scala-sbt.org/contraband/
