update dispatch reboot url

--- a/docs/00.md
+++ b/docs/00.md
@@ -8,7 +8,7 @@ out: index.html
   [sslconfig]: https://github.com/typesafehub/ssl-config
   [config]: https://github.com/typesafehub/config
   [ws]: https://www.playframework.com/documentation/2.5.x/ScalaWS
-  [dispatch]: http://dispatch.databinder.net/Dispatch.html
+  [dispatch]: https://dispatchhttp.org/Dispatch.html
   [contraband]: http://www.scala-sbt.org/contraband/
   [akkahttp]: http://doc.akka.io/docs/akka-http/current/scala.html
   [@wsargent]: https://github.com/wsargent
