s/sbt-datatype/contraband/ in docs

--- a/docs/ja/00.md
+++ b/docs/ja/00.md
@@ -56,7 +56,7 @@ Gigahorse-Akka-HTTP は現状では実験段階で、実装されていない機
   特に設定に関しては [Lightbend Config][config] と [@wsargent][@wsargent] の [SSL Config][sslconfig]
   を採用しており、よりセキュアなデフォルトになっている。
 - API の設計に関しては [@n8han][@n8han] の [Dispatch Reboot][dispatch] に強い影響を受けている。
-- データ型の全ては [@Duhemm][@Duhemm] と僕が作った [sbt-datatype][datatype] を使って自動生成されている。
+- データ型の全ては [@Duhemm][@Duhemm] と僕が作った [Contraband][contraband] を使って自動生成されている。
 - [@alexdupre][@alexdupre] は AHC 2.0 へのマイグレーションと WebSocket サポートをコントリビュートしてくれた。
 - 実際の HTTP の仕事をしている HTTP ライブラリにこの場を借りて感謝したい。
 
