update docs to Gigahorse 0.5.0

--- a/docs/00.md
+++ b/docs/00.md
@@ -73,15 +73,14 @@ Here's a quick example of how to make a GET call using Gigahorse:
 ```console
 scala> import gigahorse._, support.okhttp.Gigahorse
 scala> import scala.concurrent._, duration._
-scala> Gigahorse.withHttp(Gigahorse.config) { http =>
-         val r = Gigahorse.url("http://api.duckduckgo.com").get.
-           addQueryString(
-             "q" -> "1 + 1",
-             "format" -> "json"
-           )
-         val f = http.run(r, Gigahorse.asString andThen {_.take(60)})
-         Await.result(f, 120.seconds)
-       }
+scala> val http = Gigahorse.http(Gigahorse.config)
+scala> val r = Gigahorse.url("https://api.duckduckgo.com").get.
+         addQueryString(
+           "q" -> "1 + 1"
+         )
+scala> val f = http.run(r, Gigahorse.asString andThen {_.take(60)})
+scala> Await.result(f, 120.seconds)
+scala> http.close()
 ```
 
 <div style="margin: 100px"></div>
