--- a/docs/ja/00.md
+++ b/docs/ja/00.md
@@ -11,6 +11,7 @@ out: index.html
   [dispatch]: https://dispatchhttp.org/Dispatch.html
   [contraband]: http://www.scala-sbt.org/contraband/
   [akkahttp]: http://doc.akka.io/docs/akka-http/current/scala.html
+  [apachehttp]: https://hc.apache.org/httpcomponents-asyncclient-4.1.x/index.html
   [@wsargent]: https://github.com/wsargent
   [@n8han]: https://github.com/n8han
   [@Duhemm]: https://github.com/Duhemm
@@ -19,20 +20,27 @@ out: index.html
 Gigahorse
 =========
 
-Gigahorse は、Scala のための HTTP クライアントで、内部に [Square OkHttp][okhttp] か [Async Http Client][AHC] か [Akka HTTP][akkahttp] を使うことができる。
+Gigahorse は、Scala のための HTTP クライアントで複数のバックエンド実装をサポートする。
+内部実装として [Apache HTTP HttpAsyncClient][apachehttp] か [Async Http Client][AHC] か [Square OkHttp][okhttp] か [Akka HTTP][akkahttp] から選ぶことができる。
 
 ### セットアップ
 
-Square OkHttp を使う場合:
+Apache HTTP HttpAsyncClient を使う場合:
 
 ```scala
-libraryDependencies += "com.eed3si9n" %% "gigahorse-okhttp" % "$gigahorse_version$"
+libraryDependencies += "com.eed3si9n" %% "gigahorse-apache-http" % "$gigahorse_version$"
 ```
 
 Async HTTP Client を使う場合:
 
 ```scala
 libraryDependencies += "com.eed3si9n" %% "gigahorse-asynchttpclient" % "$gigahorse_version$"
+```
+
+Square OkHttp 3.x を使う場合:
+
+```scala
+libraryDependencies += "com.eed3si9n" %% "gigahorse-okhttp" % "$gigahorse_version$"
 ```
 
 Akka HTTP は現段階では実験的サポート:
@@ -43,12 +51,11 @@ libraryDependencies += "com.eed3si9n" %% "gigahorse-akka-http" % "$gigahorse_ver
 
 ### ライブラリ依存性
 
-Gigahorse-OkHttp は、Scala と [Square OkHttp][okhttp] に依存する。
-他に [Lightbend SSL Config][sslconfig]、そして [Lightbend Config][config] にも依存している。
-
-Gigahorse-AsyncHttpClient は、Scala、[AHC 2.0][AHC] (これは [Netty 4][netty] に依存している)、
-
-Gigahorse-Akka-HTTP は現状では実験段階で、実装されていない機能もある。
+- Gigahorse は一般的に Scala 標準ライブラリと [Lightbend SSL Config][sslconfig]、そして [Lightbend Config][config] に依存している。
+- Gigahorse-Apache-HTTP は、shading された Apache HTTP [HttpAsyncClient 2.x][apachehttp] に依存している。
+- Gigahorse-AsyncHttpClient は、shading された [AHC 2.0][AHC] (これは [Netty 4][netty] を使っている) に依存している。
+- Gigahorse-OkHttp は、Scala と [Square OkHttp][okhttp] に依存する。
+- Gigahorse-Akka-HTTP は現状では実験段階で、実装されていない機能もある。
 
 ### 謝辞
 
@@ -69,7 +76,7 @@ Apache v2
 Gigahorse を使った簡単な GET 呼び出しの例をみてみよう:
 
 ```console
-scala> import gigahorse._, support.okhttp.Gigahorse
+scala> import gigahorse._, support.apachehttp.Gigahorse
 scala> import scala.concurrent._, duration._
 scala> val http = Gigahorse.http(Gigahorse.config)
 scala> val r = Gigahorse.url("https://api.duckduckgo.com").get.
