--- a/docs/00.md
+++ b/docs/00.md
@@ -11,6 +11,7 @@ out: index.html
   [dispatch]: https://dispatchhttp.org/Dispatch.html
   [contraband]: http://www.scala-sbt.org/contraband/
   [akkahttp]: http://doc.akka.io/docs/akka-http/current/scala.html
+  [apachehttp]: https://hc.apache.org/httpcomponents-asyncclient-4.1.x/index.html
   [@wsargent]: https://github.com/wsargent
   [@n8han]: https://github.com/n8han
   [@Duhemm]: https://github.com/Duhemm
@@ -19,21 +20,27 @@ out: index.html
 Gigahorse
 =========
 
-Gigahorse is an HTTP client for Scala that can wrap either
-[Square OkHttp][okhttp], [Async Http Client][AHC], or [Akka HTTP][akkahttp] underneath.
+Gigahorse is an HTTP client for Scala with multiple backend support.
+For the internal backend you can choose from [Apache HTTP HttpAsyncClient][apachehttp], [Async Http Client][AHC], [Square OkHttp][okhttp], or [Akka HTTP][akkahttp].
 
 ### Setup
 
-For Square OkHttp Client:
+For Apache HTTP HttpAsyncClient:
 
 ```scala
-libraryDependencies += "com.eed3si9n" %% "gigahorse-okhttp" % "$gigahorse_version$"
+libraryDependencies += "com.eed3si9n" %% "gigahorse-apache-http" % "$gigahorse_version$"
 ```
 
 For Async HTTP Client:
 
 ```scala
 libraryDependencies += "com.eed3si9n" %% "gigahorse-asynchttpclient" % "$gigahorse_version$"
+```
+
+For Square OkHttp 3.x Client:
+
+```scala
+libraryDependencies += "com.eed3si9n" %% "gigahorse-okhttp" % "$gigahorse_version$"
 ```
 
 Akka HTTP support is experimental:
@@ -44,12 +51,11 @@ libraryDependencies += "com.eed3si9n" %% "gigahorse-akka-http" % "$gigahorse_ver
 
 ### Dependencies
 
-Gigahorse-OkHttp depends on Scala and [Square OkHttp][okhttp].
-It also depends on [Lightbend SSL Config][sslconfig] and [Lightbend Config][config].
-
-Gigahorse-AsyncHttpClient depends on Scala, [AHC 2.0][AHC], which brings in [Netty 4][netty].
-
-Gigahorse-Akka-HTTP is experimental, and not all features are hooked up.
+- Gigahorse generally depends on Scala standard library, [Lightbend SSL Config][sslconfig] and [Lightbend Config][config].
+- Gigahorse-Apache-HTTP depends on shaded Apache HTTP [HttpAsyncClient 2.x][apachehttp].
+- Gigahorse-AsyncHttpClient depends on shaded [AHC 2.0][AHC], which internally uses [Netty 4][netty].
+- Gigahorse-OkHttp depends on Scala and [Square OkHttp 3.x][okhttp].
+- Gigahorse-Akka-HTTP is experimental, and not all features are hooked up.
 
 ### Credits
 
@@ -71,7 +77,7 @@ Apache v2
 Here's a quick example of how to make a GET call using Gigahorse:
 
 ```console
-scala> import gigahorse._, support.okhttp.Gigahorse
+scala> import gigahorse._, support.apachehttp.Gigahorse
 scala> import scala.concurrent._, duration._
 scala> val http = Gigahorse.http(Gigahorse.config)
 scala> val r = Gigahorse.url("https://api.duckduckgo.com").get.
